# engram

./: .gitignore  Cargo.toml  LICENSE.md  README.md
engram-lib/: Cargo.toml
engram-lib/src/: db.rs  errors.rs  ffmpeg.rs  index.rs  lib.rs  media.rs  search.rs  subtitles.rs  transcribe.rs
src/: app.rs  main.rs  styles.rs
src/pages/: home.rs  results.rs  settings.rs
