[package]
name = "engram"
version = "0.0.0"
edition = "2024"
authors = ["Aditya Chaturvedi <aditya.chaturvedi1608@gmail.com>"]
license = "GPL-3.0"
description = "A desktop application for local clip search."

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
incremental = false

[dependencies]
iced = "0.13.1"
engram-lib = { path = "./engram-lib" }
