[package]
name = "engram-lib"
version = "0.0.0"
edition = "2024"
authors = ["Aditya Chaturvedi <aditya.chaturvedi1608@gmail.com>"]
license = "Apache-2.0"
description = "A library for local clip search."

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
incremental = false

[[example]]
name = "simple_search"
path = "examples/simple_search.rs"

[dependencies]
encoding_rs = "0.8"
rayon = "1.11.0"
rkyv = "0.8.15"
tantivy = "0.25.0"
thiserror = "2.0.18"
uuid = "1.21.0"
walkdir = "2.5.0"
which = "8.0.0"
whisper-rs = "0.15.1"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15.1", features = ["metal"] }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
whisper-rs = { version = "0.15.1", features = ["vulkan"] }
