[package]
name = "engram-lib"
version = "0.0.2"
edition = "2024"
authors = ["Aditya Chaturvedi <aditya.chaturvedi1608@gmail.com>"]
license = "GPL-3.0"
description = "A library for local clip search."

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
incremental = false

[dependencies]
dirs = "6.0.0"
encoding_rs = "0.8"
ffmpeg-next = "8.0.0"
rayon = "1.11.0"
tantivy = "0.25.0"
thiserror = "2.0.18"
ureq = "3.2.0"
walkdir = "2.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15.1", features = ["metal"] }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
whisper-rs = { version = "0.15.1", features = ["vulkan"] }
